--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,11 @@
 name: covid
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
+  - _py-xgboost-mutex=2.0=cpu_0
   - argon2-cffi=20.1.0=py39h27cfd23_1
   - async_generator=1.10=pyhd3eb1b0_0
   - attrs=21.2.0=pyhd3eb1b0_0
@@ -12,8 +14,8 @@ dependencies:
   - bleach=4.0.0=pyhd3eb1b0_0
   - bottleneck=1.3.2=py39hdd57654_1
   - brotlipy=0.7.0=py39h27cfd23_1003
-  - ca-certificates=2021.10.26=h06a4308_2
-  - certifi=2021.10.8=py39h06a4308_0
+  - ca-certificates=2021.10.8=ha878542_0
+  - certifi=2021.10.8=py39hf3d152e_1
   - cffi=1.14.6=py39h400218f_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.3=pyhd3eb1b0_0
@@ -39,6 +41,7 @@ dependencies:
   - gstreamer=1.14.0=h28cd5cc_2
   - icu=58.2=he6710b0_3
   - idna=3.2=pyhd3eb1b0_0
+  - imbalanced-learn=0.8.1=pyhd8ed1ab_0
   - importlib-metadata=4.8.1=py39h06a4308_0
   - importlib_metadata=4.8.1=hd3eb1b0_0
   - intel-openmp=2021.4.0=h06a4308_3561
@@ -74,6 +77,7 @@ dependencies:
   - libwebp=1.2.0=h89dd481_0
   - libwebp-base=1.2.0=h27cfd23_0
   - libxcb=1.14=h7b6447c_0
+  - libxgboost=1.3.3=h2531618_0
   - libxml2=2.9.12=h03d6c58_0
   - lz4-c=1.9.3=h295c915_1
   - markupsafe=2.0.1=py39h27cfd23_0
@@ -110,6 +114,7 @@ dependencies:
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - prompt_toolkit=3.0.20=hd3eb1b0_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - py-xgboost=1.3.3=py39h06a4308_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.10.0=pyhd3eb1b0_0
   - pyopenssl=21.0.0=pyhd3eb1b0_1
@@ -119,6 +124,7 @@ dependencies:
   - pysocks=1.7.1=py39h06a4308_0
   - python=3.9.7=h12debd9_1
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
   - pytz=2021.3=pyhd3eb1b0_0
   - pyyaml=6.0=py39h7f8727e_1
   - pyzmq=22.2.1=py39h295c915_1
@@ -149,6 +155,7 @@ dependencies:
   - werkzeug=2.0.2=pyhd3eb1b0_0
   - wheel=0.37.0=pyhd3eb1b0_1
   - widgetsnbextension=3.5.1=py39h06a4308_0
+  - xgboost=1.3.3=py39h06a4308_0
   - xz=5.2.5=h7b6447c_0
   - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
